--- a/src/main/resources/templates/base/index.html
+++ b/src/main/resources/templates/base/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<!--Head in Thymeleaf - Fragments-->
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
     <meta name='author' content='HeyGilly'>
-    <meta name='subject' content="Homepage for Bookworm V.2">
+    <meta name='subject' content="Bookworm V.2">
     <meta name='keywords' content='Spring Boot, HTML, CSS, Vanilla Javascript, Bootstrap, JPA'>
     <meta name='description' content="BookWorm V.2, powered by Spring Boot, offers users the ability to explore, review, and organize their beloved books. By employing JPA annotations for seamless object mapping and Bootstrap for a responsive front-end design. Additionally, I implemented book search functionality and a 'like' feature for personalized collections, uniting design and technology to cultivate a thriving community of book enthusiasts.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Title of Web Page-->
-    <title>Home Page</title>
+    <title>HomePage</title>
+    <!--  Bootstrap 5.2  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
 
+<h1>It works</h1>
 
-
+    <!--  Bootstrap 5.2  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
