--- a/src/main/resources/templates/base/index.html
+++ b/src/main/resources/templates/base/index.html
@@ -14,7 +14,13 @@
 </head>
 <body>
 
-<h1>It works</h1>
+        <div>
+            <h3>All Books</h3>
+            <section th:each="book:${bookshelf}" class="d-flex">
+                <span th:text="${book.getTitle()}" class="border border-3 border-dark">Title of Book</span>
+            </section>
+        </div>
+
 
     <!--  Bootstrap 5.2  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
