--- a/src/main/resources/templates/base/index.html
+++ b/src/main/resources/templates/base/index.html
@@ -9,11 +9,230 @@
     <meta name='description' content="BookWorm V.2, powered by Spring Boot, offers users the ability to explore, review, and organize their beloved books. By employing JPA annotations for seamless object mapping and Bootstrap for a responsive front-end design. Additionally, I implemented book search functionality and a 'like' feature for personalized collections, uniting design and technology to cultivate a thriving community of book enthusiasts.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HomePage</title>
+    <link rel="shortcut icon" type="image/png" th:href="@{img/bookworm.png}"/>
     <!--  Bootstrap 5.2  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/5d0c1b436d.js" crossorigin="anonymous"></script>
+<style>
+
+    /*===== Hero Container =====*/
+    #hero{
+        width: 100%;
+        height: 80vh;
+        background: #37517e;
+    }
+    #hero .container{
+        padding-top: 72px;
+    }
+
+    /*===== Heading 1 =====*/
+   #hero h1 {
+        font-family: "Jost", sans-serif;
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 56px;
+        color: #fff;
+    }
+
+    /*===== Heading 2 =====*/
+   #hero h2{
+        font-family: "Jost", sans-serif;
+        color: rgba(255, 255, 255, 0.6);
+        margin-bottom: 50px;
+        font-size: 24px;
+    }
+
+    /*===== Get Started Button =====*/
+    .btn-get-started{
+        font-family: "Jost", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        letter-spacing: 1px;
+        padding: 10px 28px;
+        border-radius: 50px;
+        margin: 10px 0 0 0;
+        color: #fff;
+        background: #47b2e4;
+        transition: 0.5s;
+        /*display: inline-block;*/
+        text-decoration: none;
+    }
+    .btn-get-started:hover {
+        background: #209dd8;
+    }
+
+   /*===== Login Button =====*/
+    .btn-log-in{
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        margin: 10px 0 0 25px;
+        color: #fff;
+        line-height: 1px;
+        text-decoration: none;
+        transition: 0.5s;
+    }
+    .btn-log-in:hover{
+        color:#47b2e4;
+    }
+   /*===== Hero - Image Logo =====*/
+    .hero-img img{
+        width: 75%;
+    }
+
+    /*=== Screen smaller then 991px ===*/
+    @media (max-width: 991px){
+        #hero {
+            height:100vh;
+            text-align: center;
+        }
+        .hero-img{
+            text-align: center;
+        }
+
+        .hero-img img{
+            width: 50%;
+        }
+    }
+
+    /*=== Screen smaller then 768px ===*/
+    @media (max-width: 768px){
+        #hero h1{
+            font-size: 28px;
+            line-height: 36px;
+        }
+        #hero h2{
+            font-size:18px;
+            line-height: 24px;
+            margin-bottom: 30px;
+        }
+        #hero .hero-img img{
+            width: 70%;
+        }
+    }
+
+    /*=== Screen smaller then 575px ===*/
+    @media (max-width: 575px){
+        #hero .hero-img img{
+            width: 80%;
+        }
+        #hero .btn-get-started{
+            font-size: 16px;
+            padding: 10px 24px;
+        }
+    }
+
+
+/*=====  Services  =====*/
+    #services{
+        margin-top: -120px;
+        padding: 60px;
+        overflow: hidden;
+        z-index: 100;
+        display: block;
+        position: relative;
+    }
+    .icon-container {
+        box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.1);
+        padding: 50px 30px;
+        background: #fff;
+        border-radius: 50px 25px;
+        z-index: 100;
+        display: block;
+        position: relative;
+        transition: all ease-in-out 0.4s;
+    }
+
+    .icon-container:hover{
+        transform: translateY(-10px);
+    }
+
+    .services .icon-container .icon{
+        margin-bottom: 10px;
+    }
+
+    .icon .icon-logo {
+        color: #47b2e4;
+        font-size: 36px;
+    }
+
+    .icon-container h4{
+        font-weight: 400;
+        margin-bottom: 15px;
+        font-size: 24px;
+        color: #37517e;
+    }
+    .icon-container p{
+        line-height: 24px;
+        font-size: 14px;
+        margin-bottom: 0;
+    }
+
+
+
+
+</style>
 </head>
 <body>
 
+
+    <!===== Hero Section =====>
+    <main id="hero" class="container-fluid d-flex align-items-center">
+        <div class="container">
+            <div class="row">
+                <section class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
+                    <h1>Embrace Your Inner Bookworm</h1>
+                    <h2>explore, review, and see what others are saying about your favorite books.</h2>
+                    <aside class="d-flex justify-content-center justify-content-lg-start">
+                        <a href="" class="btn-get-started">Get Started</a>
+                        <a href="" class="btn-log-in">Log in</a>
+                    </aside>
+                </section>
+                <section class="col-lg-6 hero-img order-1 order-lg-2">
+                    <img th:src="@{img/bookworm.png}" alt="Bookworm Logo" class="img-fluid"/>
+                </section>
+            </div>
+        </div>
+    </main>
+
+
+    <!===== Services =====>
+        <div id="services" class="services section-bg">
+            <div class="container" >
+                <section class="row">
+                    <!===== Search =====>
+                    <article class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+                        <section class="icon-container">
+                            <div class="icon"><i class="fa-solid fa-magnifying-glass icon-logo"></i></div>
+                            <h4>Search for Books</h4>
+                            <p>Explore our database to discover the book that will steal your heart.</p>
+                        </section>
+                    </article>
+                    <!===== Review =====>
+                    <article class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+                        <section class="icon-container">
+                            <div class="icon"><i class="fa-solid fa-comment icon-logo"></i></div>
+                            <h4>Leave reviews</h4>
+                            <p>Share your thoughts and pen down your reviews to let the world know what you truly felt about that book!</p>
+                        </section>
+                    </article>
+                    <!===== Favorite =====>
+                    <article class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+                        <section class="icon-container">
+                            <div class="icon"><i class="fa-solid fa-heart-circle-plus icon-logo"></i></div>
+                            <h4>Favorite books</h4>
+                            <p>Never lose sight of your beloved books and discover your next great read!</p>
+                        </section>
+                    </article>
+
+
+                </section>
+            </div>
+        </div>
+
+
+    <!===== Books Available =====>
         <div>
             <h3>All Books</h3>
             <section th:each="book:${bookshelf}" class="d-flex">
@@ -24,5 +243,6 @@
 
     <!--  Bootstrap 5.2  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 </body>
 </html>
