--- a/src/main/resources/templates/base/index.html
+++ b/src/main/resources/templates/base/index.html
@@ -1,51 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
-<!--Head in Thymeleaf - Fragments-->
-<head>
-    <meta charset="UTF-8">
-    <meta name='author' content='HeyGilly'>
-    <meta name='subject' content="Bookworm V.2">
-    <meta name='keywords' content='Spring Boot, HTML, CSS, Vanilla Javascript, Bootstrap, JPA'>
-    <meta name='description' content="BookWorm V.2, powered by Spring Boot, offers users the ability to explore, review, and organize their beloved books. By employing JPA annotations for seamless object mapping and Bootstrap for a responsive front-end design. Additionally, I implemented book search functionality and a 'like' feature for personalized collections, uniting design and technology to cultivate a thriving community of book enthusiasts.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HomePage</title>
-    <link rel="shortcut icon" type="image/png" th:href="@{img/bookworm.png}"/>
-    <!--  Bootstrap 5.2  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/5d0c1b436d.js" crossorigin="anonymous"></script>
-    <!-- Personal Stylesheet -->
-    <link rel="stylesheet" th:href="@{/css/myStylesheet.css}">
-</head>
+<!=== Head in Thymeleaf - Fragments ===>
+<head th:replace="partials/head.html :: head ('Welcome to journey')" ></head>
 <body>
 
 
     <!===== Navbar =====>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary py-3">
-        <div class="container">
-            <!== Nav Title ==>
-            <span class="navbar-brand">Bookworm</span>
-            <!== Button ==>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!== Drop Down ==>
-            <div class="collapse navbar-collapse mt-3 mt-lg-0" id="navbarNavDropdown">
-                <ul class="navbar-nav ms-auto d-lg-flex align-items-lg-center">
-                    <!== About Bookworm ==>
-                    <li class=""><a th:href="@{/aboutBookworm}" href="" class="nav-link">About Bookworm</a></li>
-                    <!== Log in button ==>
-                    <li class="mx-lg-3"><a href="" class="btn-log-in-nav nav-link">Log in</a></li>
-                    <!== Get Started Button ==>
-                    <li class="pb-3 pb-lg-0"><a href="" class="btn-get-started text-center">Get Started</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-
-
+    <nav th:replace="partials/navbar.html :: Navbar"></nav>
 
 
     <!===== Hero Section =====>
@@ -129,22 +90,7 @@
     </div>
 
 
-
-    <footer id="footer" class="container-fluid mt-5">
-        <div class="container footer-bottom clearfix">
-            <div class="copyright">
-                &copy; Fake Copyright <strong><span>Bookworm V.2</span></strong>. All Rights Reserved
-            </div>
-            <div class="credits">
-                Designed by <a href="https://www.linkedin.com/in/heygilly/">HeyGilly</a>
-            </div>
-        </div>
-    </footer>
-
-
-
-
-    <!--  Bootstrap 5.2  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <!=== Footer ===>
+    <footer th:replace="partials/footer.html :: Footer"></footer>
+    </body>
 </html>
