--- a/src/main/resources/static/css/myStylesheet.css
+++ b/src/main/resources/static/css/myStylesheet.css
@@ -1,3 +1,5 @@
+@import "aboutStylesheet.css";
+
 
 h1,
 h2,
@@ -16,9 +18,6 @@ body{
 /*======= Navbar =======*/
 .navbar-brand{
     font-family: "Jost", sans-serif;
-}
-.navbar-nav{
-
 }
 
 .btn-log-in-nav{
