--- a/src/main/resources/templates/SignUp/register.html
+++ b/src/main/resources/templates/SignUp/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
 <!=== Head in Thymeleaf - Fragments ===>
-<head th:replace="partials/head.html :: head ('Log in')" ></head>
+<head th:replace="partials/head.html :: head ('Sign up')" ></head>
 <body>
 
 
@@ -10,8 +10,7 @@
 
 
 
-<h1>login</h1>
-
+<h1>Sign up</h1>
 
 
 
