margin top taking off

--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -1,4 +1,4 @@
-<footer id="footer" class="container-fluid mt-5" th:fragment="Footer">
+<footer id="footer" class="container-fluid" th:fragment="Footer">
   <div class="container footer-bottom clearfix">
     <div class="copyright">
       &copy; Fake Copyright <strong><span>Bookworm V.2</span></strong>. All Rights Reserved
