--- a/src/main/resources/templates/SignUp/login.html
+++ b/src/main/resources/templates/SignUp/login.html
@@ -12,81 +12,59 @@
 
 
 <main id="login-section">
-
-    <div class="container py-5 h-100 border border-warning border-3">
-
-        <div class="row d-flex justify-content-center align-items-center h-100 border border-3 border-danger" >
-
-            <div class="col col-xl-10 border border-4 border-secondary">
-
-                <div class="card border border-3 border-primary">
-
-                <div class="row g-0 border border-3 border-light">
-                    <!==== IMG Container ====>
-                    <section class="col-md-6 col-lg-5 d-none d-md-block border border-3 border-dark">
-                        <!==== Image ====>
-                        <img src="/img/couch.jpg" alt="Login Books" class="img-fluid"/>
-
-                    </section>
-
-                    <section class="col-md-6 col-lg-7 d-flex align-items-center" style="border: 4px solid greenyellow">
-
-                        <div class="card-body p-4 p-lg-5 text-black" style="border: 4px solid orangered">
-
-                            <!==== Form ====>
-                            <form>
-
-                                <!== icon and logo ===>
-                                <section class="d-flex align-items-center mb-3 pb-1" style="border: 4px solid darkslategrey">
-                                    <i class="fas fa-cubes fa2x me-3" style="color: #ff950c"></i>
-                                    <h1 class="h1 fw-bold mb-0">Logo</h1>
-                                </section>
-
-                                <h5 class="fw-normal mb-3 pb-3 letter-spacing-1" style="border: 4px solid palevioletred">Sign into your account</h5>
-
-                                <!==== Form Container - User Email ====>
-                                <section class="form-outline mb-4">
-                                    <input type="email" id="useremail" class="form-control" />
-                                    <label class="form-label" for="useremail">Email Address</label>
-                                </section>
-
-                                <!==== Form Container - User Password ====>
-                                <section class="form-outline mb-4">
-                                    <input type="password" id="userPassword" class="form-control" />
-                                    <label class="form-label" for="userPassword">Password</label>
-                                </section>
-
-                                <!==== Form Container - Submit Button ====>
-                                <div class="pt-1 mb-4">
-                                    <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
-                                </div>
-
-                                <!==== Forgot Password ====>
-                                <a class="small text-muted" th:href="@{#}">Forgot password?</a>
-                                <!==== Register Here ====>
-                                <p class="mb-5 pb-lg-2" style="color: #393f81">
-                                    Don't have an account?
-                                    <a th:href="@{/Sign-up}" style="color:#393f81;">
-                                        Register here
-                                    </a>
-                                </p>
-
-                            </form>
-
-                        </div>
-
-                    </section>
-
-                </div>
-
-                </div>
-
+    <!==== Container ====>
+    <div class="container">
+        <!==== Login Card ====>
+        <div class="col col-md-12 col-lg-10 card">
+            <!==== Separates sides ====>
+            <div class="row g-0">
+                <!==== IMG Container ====>
+                <header class="col-md-6 col-lg-5 d-none d-md-block">
+                    <!==== Image ====>
+                    <img src="/img/couch.jpg" alt="Login Books" />
+                </header>
+                <!==== Context Container ====>
+                <section class="col-md-6 col-lg-7 d-flex align-items-center">
+                    <!==== Right Side of Card ====>
+                    <div class="card-body p-4 p-lg-5">
+                        <!==== Form ====>
+                        <form class="text-black">
+                            <!== icon and logo ===>
+                            <section class="d-flex align-items-center mb-3 pb-1">
+                                <img th:src="@{img/bookworm.png}" th:height="*{120}" alt="logo" class="me-3"/>
+                                <h1 class="h1 fw-bold mb-0">Bookworm</h1>
+                            </section>
+                            <!==== Form header ====>
+                            <h5 class="fw-normal mb-5 pb-3 letter-spacing-1">Sign in to your account</h5>
+                            <!==== User Email ====>
+                            <section class="form-outline mb-2">
+                                <input type="email" id="userEmail" class="form-control" />
+                                <label class="form-label" for="userEmail">Email Address</label>
+                            </section>
+                            <!==== User Password ====>
+                            <section class="form-outline mb-2">
+                                <input type="password" id="userPassword" class="form-control" />
+                                <label class="form-label" for="userPassword">Password</label>
+                            </section>
+                            <!==== Form Container - Submit Button ====>
+                            <div class="pt-1 mb-2">
+                                <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
+                            </div>
+                            <!==== Forgot Password ====>
+                            <a class="small text-muted" th:href="@{#}">Forgot password?</a>
+                            <!==== Register Here ====>
+                            <p class="mb-5 pb-lg-2" style="color: #393f81">
+                                Don't have an account?
+                                <a th:href="@{/Sign-up}" style="color:#393f81;">
+                                    Register here
+                                </a>
+                            </p>
+                        </form>
+                    </div>
+                </section>
             </div>
-
         </div>
-
     </div>
-
 </main>
 
 
