--- a/src/main/resources/static/css/signinStylesheet.css
+++ b/src/main/resources/static/css/signinStylesheet.css
@@ -13,10 +13,32 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    grid-row: 1 / 2;
 }
 
 /*=== Image ===*/
 #login-section .container .row header img{
     height: 100%;
     width: 100%;
+}
+
+/*==== Register Form ====*/
+#login-section .container #register-form{
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+#login-section .container #register-form #register-form-submit-btn{
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding: 10px 28px;
+    border-radius: 50px;
+    color: #fff;
+    background: #47b2e4;
+    transition: 0.5s;
+    text-decoration: none;
+    border: none;
+}
+#login-section .container #register-form #register-form-submit-btn:hover{
+    background: #209dd8;
 }
