--- a/src/main/resources/templates/SignUp/register.html
+++ b/src/main/resources/templates/SignUp/register.html
@@ -16,7 +16,7 @@
         <!===== Form ====>
         <form id="register-form" class="row g-3 bg-light p-3 col-12 col-md-8 col-lg-6 rounded rounded-5">
             <!=== Title ====>
-            <h3 class="text-center fw-bold fs-1">Sign up for free</h3>
+            <h3 class="text-center fw-bold fs-1 p-0 m-0">Sign up for free</h3>
             <hr>
             <!==== First Name =====>
             <div class="col-md-6">
