--- a/src/main/resources/templates/main/introduction-page.html
+++ b/src/main/resources/templates/main/introduction-page.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<!=== Head in Thymeleaf - Fragments ===>
+<head th:replace="partials/head.html :: head ('Main Page')" ></head>
 <body>
 
+
+
+<!===== NavBar ====>
+<nav class="navbar navbar-expand-lg bg-body-tertiary py-3" th:fragment="Navbar">
+    <div class="container">
+        <!== Nav Title ==>
+        <span class="navbar-brand"><a th:href="@{/}">Bookworm</a></span>
+        <!== Button ==>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!== Drop Down ==>
+        <div class="collapse navbar-collapse mt-3 mt-lg-0" id="navbarNavDropdown">
+
+            <!==== Nav Links ====>
+            <ul class="navbar-nav ms-auto d-lg-flex align-items-lg-center">
+                <!===== Search Bar =====>
+                <li class=""><form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                </form></li>
+                <!== Main Page ==>
+                <li class=""><a th:href="@{/welcome-page}" href="" class="nav-link">Main Page</a></li>
+                <!== Single Book ==>
+                <li class="mx-lg-3"><a th:href="@{/single-book}" class="nav-link">Single Book</a></li>
+                <!== User Profile ==>
+                <li class="pb-3 pb-lg-0"><a th:href="@{/userProfile}" class="nav-link">Profile</a></li>
+                <!=== Log Out ===>
+                <li class="pb-3 pb-lg-0"><a th:href="@{/logout}" class="nav-link">Log out</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+
+
+
+
+<!=== Footer ===>
+<footer th:replace="partials/footer.html :: Footer"></footer>
 </body>
 </html>
